* Jifty::Manual::Continuations: reflect tangent() in the manual.
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@1665 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/lib/Jifty/Manual/Continuations.pod
+++ b/lib/Jifty/Manual/Continuations.pod
@@ -147,8 +147,8 @@ the new url.  This is particularly useful, say, for authentication
 protection in C<before> blocks:
 
     before '/protected' => sub {
-        Jifty->web->tangent( url => '/login' )
-          unless Jifty->web->current_user->id;
+        # shorthand for: Jifty->web->tangent( url => '/login' )
+        tangent('/login') unless Jifty->web->current_user->id;
     };
 
 And in the C</login> template:
