Add myself to the AUTHORS file
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@1725 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/AUTHORS
+++ b/AUTHORS
@@ -11,3 +11,4 @@ Sean E Millichamp <sean@enertronllc.com>
 Kenichi Ishigaki <ishigaki@tcool.org>
 Chia-Liang Kao <clkao@clkao.org>
 Dobrica Pavlinusic <dpavlin@rot13.org>
+Bart Bunting <bart@bunting.net.au>
