added myself as an author at obra's request
soon to add documentation.



git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@1793 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/AUTHORS
+++ b/AUTHORS
@@ -12,3 +12,4 @@ Kenichi Ishigaki <ishigaki@tcool.org>
 Chia-Liang Kao <clkao@clkao.org>
 Dobrica Pavlinusic <dpavlin@rot13.org>
 Bart Bunting <bart@bunting.net.au>
+Mark Fowler <mark@twoshortplanks.com>
