* Updated my email address
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@1804 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/AUTHORS
+++ b/AUTHORS
@@ -7,7 +7,7 @@ Kevin Riggle <kevinr@bestpractical.com>
 Audrey Tang <audreyt@audreyt.org>
 Eric Wilhelm <ewilhelm@cpan.org>
 Nelson Elhage <nelhage@mit.edu>
-Sean E Millichamp <sean@enertronllc.com>
+Sean E Millichamp <sean@bruenor.org>
 Kenichi Ishigaki <ishigaki@tcool.org>
 Chia-Liang Kao <clkao@clkao.org>
 Dobrica Pavlinusic <dpavlin@rot13.org>
