Looks like I forgot to add myself to AUTHORS a long time ago.
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@1809 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/AUTHORS
+++ b/AUTHORS
@@ -12,4 +12,5 @@ Kenichi Ishigaki <ishigaki@tcool.org>
 Chia-Liang Kao <clkao@clkao.org>
 Dobrica Pavlinusic <dpavlin@rot13.org>
 Bart Bunting <bart@bunting.net.au>
+Norman Nunley, Jr. <nnunley@cpan.org>
 Mark Fowler <mark@twoshortplanks.com>
