Didn't mean to revert this change
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@1820 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/lib/Jifty/Manual/Tutorial.pod
+++ b/lib/Jifty/Manual/Tutorial.pod
@@ -223,8 +223,7 @@ C<tags> table.)
 
 Position your cursor right after:
 
-  # Your column definitions go here.  See L<Jifty::DBI::Schema> for
-  # documentation about how to write column definitions.
+  use MyWeblog::Record schema {
 
 Add the lines:
 
