add myself to AUTHORS
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@1838 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/AUTHORS
+++ b/AUTHORS
@@ -14,3 +14,4 @@ Dobrica Pavlinusic <dpavlin@rot13.org>
 Bart Bunting <bart@bunting.net.au>
 Norman Nunley, Jr. <nnunley@cpan.org>
 Mark Fowler <mark@twoshortplanks.com>
+Liang-Bin Hsueh <hlb@bestpractical.com>
