--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+jifty (0.60728-2) unstable; urgency=low
+
+  * More dependencies, we're nearly there seems I missed some.
+
+ -- Bart Bunting <bart@bunting.net.au>  Fri, 25 Aug 2006 06:55:04 +1000
+
 jifty (0.60728-1) unstable; urgency=low
 
   * Initial debianisation.
