hopefully the last missing dependencies - jifty now installs and runs on Ubuntu Dapper
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@1860 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+jifty (0.60728-3) unstable; urgency=low
+
+  * Missed some date dependencies
+
+ -- Bart Bunting <bart@ursys.com.au>  Fri, 25 Aug 2006 09:30:28 +1000
+
 jifty (0.60728-2) unstable; urgency=low
 
   * More dependencies, we're nearly there seems I missed some.
