Mention Shell::Command and Jifty::Test->temp_file in the style guide.
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@1900 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/lib/Jifty/Manual/Style.pod
+++ b/lib/Jifty/Manual/Style.pod
@@ -25,4 +25,27 @@ code.
         ...
   }
 
+
+=head3 Test temp files
+
+Files created by tests should be declared as such using
+Jifty::Test->test_file() so they are cleaned up on a successful test
+run.
+
+
+=head3 Use Shell::Command
+
+Shell::Command has a number of functions which work like common shell file
+commands such as touch, cp and mv.  Use them instead of coding your own.
+
+For example, instead of this:
+
+    open my $file, ">foo";
+    close $file;
+
+Do this:
+
+    use Shell::Command;
+    touch $file;
+
 =cut
