small note on changing table names
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@1932 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/lib/Jifty/Manual/Cookbook.pod
+++ b/lib/Jifty/Manual/Cookbook.pod
@@ -160,3 +160,9 @@ You could give a C<--print> option to see the actual SQL statement:
 
     jifty schema --setup --print
 
+
+=head2 Use different table names than the ones Jifty automatically creates
+
+In YourApp::Record define a _guess_table_name sub that doesn't
+pluralises or pluralises differently.
+
