Wolfgang Kinkeldei: added a pod on models - not yet complete
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@1933 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/AUTHORS
+++ b/AUTHORS
@@ -15,3 +15,4 @@ Bart Bunting <bart@bunting.net.au>
 Norman Nunley, Jr. <nnunley@cpan.org>
 Mark Fowler <mark@twoshortplanks.com>
 Liang-Bin Hsueh <hlb@bestpractical.com>
+Wolfgang Kinkeldei <wolfgang@kinkeldei.de>
