Updated tutorial to remove mention of the deprecated download area. Provided extra tips on how to install Jifty using Perl's standard CPAN module on both Unix-like and Win32 systems. Added PJF to AUTHORS file.
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@1991 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/AUTHORS
+++ b/AUTHORS
@@ -16,3 +16,4 @@ Norman Nunley, Jr. <nnunley@cpan.org>
 Mark Fowler <mark@twoshortplanks.com>
 Liang-Bin Hsueh <hlb@bestpractical.com>
 Wolfgang Kinkeldei <wolfgang@kinkeldei.de>
+Paul Fenwick <pjf@perltraining.com.au>
