--- a/lib/Jifty/Manual/Models.pod
+++ b/lib/Jifty/Manual/Models.pod
@@ -72,7 +72,7 @@ A simple definition could look like this:
         type is 'text',
         label is 'Name',
         render_as 'Text',
-        sincle '0.0.1';
+        since '0.0.1';
 
 The following BNF shows the full syntax supported (omitting
 non-terminals that are self explaining for perl-developers):
