Minor fixes to pod
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@2029 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/AUTHORS
+++ b/AUTHORS
@@ -17,3 +17,4 @@ Mark Fowler <mark@twoshortplanks.com>
 Liang-Bin Hsueh <hlb@bestpractical.com>
 Wolfgang Kinkeldei <wolfgang@kinkeldei.de>
 Paul Fenwick <pjf@perltraining.com.au>
+Edmund von der Burg <evdb@ecclestoad.co.uk>
